refactor: clean up credential config api versioning
Signed-off-by: Swati Goel <meet2swati@gmail.com>